-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: hotspot
-
b37
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8194603 | 11 | Vladimir Ivanov | P3 | Resolved | Fixed | b01 |
There's a performance regression in 9 (compared to 8) in Math.pow(x, 2.0D).
Math.pow() was rewritten in 9 (seeJDK-8145688), but it doesn't have special case for power-of-two in C2 intrinsic implementation.
Original report:
https://www.reddit.com/r/java/comments/7bbh72/i_think_i_found_piece_of_code_which_is_8_times/
Math.pow() was rewritten in 9 (see
Original report:
https://www.reddit.com/r/java/comments/7bbh72/i_think_i_found_piece_of_code_which_is_8_times/
- backported by
-
JDK-8194603 C2: missing strength reduction of Math.pow(x, 2.0D) to x*x
-
- Resolved
-
- duplicates
-
JDK-8190872 Regression in Math.pow for powers of 2
-
- Closed
-
- relates to
-
JDK-8378713 C2: performance regression due to missing constant folding for Math.pow()
-
- Open
-
-
JDK-8029302 Performance regression in Math.pow intrinsic
-
- Resolved
-
-
JDK-8145688 update for x86 pow in the math lib
-
- Resolved
-
-
JDK-8209439 C2 library_call can potentially ignore Math.pow intrinsic or use null pointer
-
- Resolved
-
(1 relates to)