8190869: C2: missing strength reduction of Math.pow(x, 2.0D) to x*x

Reviewed-by: kvn